--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -107,9 +107,11 @@ jobs:
 
       - name: Run E2E tests
         id: run_tests
+        env:
+          SEED_PHRASE: ${{ secrets.QA_SEED_PHRASE }}
         run: |
           mkdir -p reports
-          WEBSOCKET=ws://localhost:9944 ZKV_CONTRACT=${{ env.ZKV_CONTRACT }} npm --prefix ../../ run test:e2e 2>&1 | tee reports/test_output.txt
+          WEBSOCKET=ws://localhost:9944 ZKV_CONTRACT=${{ env.ZKV_CONTRACT }} SEED_PHRASE=${{ secrets.QA_SEED_PHRASE }} npm --prefix ../../ run test:e2e 2>&1 | tee reports/test_output.txt
         working-directory: src/e2e-tests
 
       - name: Parse Test Results
