--- a/src/e2e-tests/docker-compose.yml
+++ b/src/e2e-tests/docker-compose.yml
@@ -58,6 +58,10 @@ services:
     depends_on:
       subquery-postgres:
         condition: service_healthy
+      anvil-node:
+        condition: service_started
+      node:
+        condition: service_started
     restart: unless-stopped
     environment:
       - "DB_USER=${SUBQUERY_DB_USER}"
@@ -89,9 +93,9 @@ services:
           -f,
           "http://subquery-node:${SUBQUERY_NODE_PORT}/ready"
         ]
-      interval: 3s
-      timeout: 5s
-      retries: 10
+      interval: 5s
+      timeout: 10s
+      retries: 15
 
   graphql-engine:
     image: subquerynetwork/subql-query:${SUBQL_QUERY_VERSION}
