--- a/src/e2e-tests/docker-compose.yml
+++ b/src/e2e-tests/docker-compose.yml
@@ -85,6 +85,7 @@ services:
       - --port=${SUBQUERY_NODE_PORT}
       - --unfinalized-blocks=false
       - --skip-transactions
+      - --debug
     healthcheck:
       test:
         [
