--- a/.env.local.e2e
+++ b/.env.local.e2e
@@ -1,7 +1,7 @@
 DEV_MODE=true
-RPC_URL=http://localhost:9944
-WEBSOCKET=ws://localhost:9944
-ANVIL=http://localhost:8545
+RPC_URL=http://local_node:9944
+WEBSOCKET=ws://local_node:9944
+ANVIL=http://anvil-node:8545
 ZKV_CONTRACT=0x5FbDB2315678afecb367f032d93F642f64180aa3
 SEED_PHRASE=//Alice
 
