--- a/src/e2e-tests/docker-compose.yml
+++ b/src/e2e-tests/docker-compose.yml
@@ -67,6 +67,8 @@ services:
     depends_on:
       subquery-postgres:
         condition: service_healthy
+      local_node:
+        condition: service_healthy
     restart: unless-stopped
     environment:
       - "DB_USER=${SUBQUERY_DB_USER}"
