--- a/src/e2e-tests/docker-compose.yml
+++ b/src/e2e-tests/docker-compose.yml
@@ -2,6 +2,11 @@ volumes:
   contract-data:
   subquery-postgres-data:
 
+networks:
+  zkverify_network:
+    name: zkverify_network
+    external: true
+
 services:
   anvil-node:
     platform: linux/amd64
@@ -12,6 +17,8 @@ services:
       - contract-data:/data
     ports:
       - "8545:8545"
+    networks:
+      - zkverify_network
 
   local_node:
     image: horizenlabs/zkverify:${ZKVERIFY_IMAGE_TAG}
@@ -24,6 +31,8 @@ services:
       - "${NODE_NET_P2P_PORT}:${NODE_NET_P2P_PORT}"
     expose:
       - "${NODE_NET_RPC_WS_PORT}"
+    networks:
+      - zkverify_network
     healthcheck:
       test:
         [
@@ -45,6 +54,8 @@ services:
     image: horizenlabs/zkverify:${ZKVERIFY_IMAGE_TAG}
     env_file:
       - ./services/zkVerify/docker/resources/envs/.env.alice
+    networks:
+      - zkverify_network
 
   node_bob:
     image: horizenlabs/zkverify:${ZKVERIFY_IMAGE_TAG}
@@ -52,6 +63,8 @@ services:
       - ./services/zkVerify/docker/resources/envs/.env.bob
     volumes:
       - ./services/zkVerify/docker/resources/deploy:/data/config
+    networks:
+      - zkverify_network
 
   subquery-postgres:
     image: horizenlabs/zkverify-subquery-postgres:1.0.0
@@ -63,6 +76,8 @@ services:
       - "POSTGRES_PASSWORD=${SUBQUERY_DB_PASS}"
     expose:
       - ${SUBQUERY_DB_PORT}
+    networks:
+      - zkverify_network
     healthcheck:
       test: [CMD-SHELL, pg_isready -U postgres]
       interval: 5s
@@ -74,6 +89,8 @@ services:
     container_name: subquery-node
     hostname: subquery-node
     platform: linux/amd64
+    networks:
+      - zkverify_network
     depends_on:
       subquery-postgres:
         condition: service_healthy
@@ -128,6 +145,8 @@ services:
       - "PORT=${GRAPHQL_QUERY_PORT}"
     expose:
       - ${GRAPHQL_QUERY_PORT}
+    networks:
+      - zkverify_network
     command:
       - --name=app
       - --indexer=http://subquery-node:${SUBQUERY_NODE_PORT}
@@ -157,6 +176,8 @@ services:
       - .env
     ports:
       - "3000:3000"
+    networks:
+      - zkverify_network
     depends_on:
       - anvil-node
       - local_node
