--- a/src/e2e-tests/docker-compose.yml
+++ b/src/e2e-tests/docker-compose.yml
@@ -111,7 +111,7 @@ services:
     entrypoint: [/usr/local/bin/entrypoint.sh]
     command:
       - -f=/app
-      - --network-endpoint=ws://local_node:9944
+      - --network-endpoint=ws://localhost:9944
       - --db-schema=app
       - --workers=${SUBQUERY_NODE_WORKERS}
       - --batch-size=${SUBQUERY_NODE_BATCH_SIZE}
