--- a/src/e2e-tests/.env
+++ b/src/e2e-tests/.env
@@ -20,11 +20,11 @@ SUBQUERY_NODE_CHAIN_ID=0xb06684a10612a793bd11d0dee9049b11d2dfc274efa13c9299d8bf0
 
 # Attestation bot configs
 ZKVERIFY_IMAGE_TAG=latest
-ZKV_ATTEST_BOT_GRAPHQL_SERVICE_URL="http://graphql-engine:${GRAPHQL_QUERY_PORT}"
+ZKV_ATTEST_BOT_GRAPHQL_SERVICE_URL="http://localhost:${GRAPHQL_QUERY_PORT}"
 ZKV_ATTEST_BOT_LOG_LEVEL=debug
 ZKV_ATTEST_BOT_POLL_INTERVAL=500
 ZKV_ATTEST_BOT_ETH_MAX_RETRIES=10
 ZKV_ATTEST_BOT_ETH_RETRY_INTERVAL=60000
 ZKV_ATTEST_BOT_ETH_RETRY_GAS_INCREASE_PERCENTAGE=30
-ZKV_ATTEST_BOT_ETH_JSON_RPC_PROVIDER_URL="http://anvil-node:8545"
+ZKV_ATTEST_BOT_ETH_JSON_RPC_PROVIDER_URL="http://localhost:8545"
 
