--- a/src/e2e-tests/docker-compose.yml
+++ b/src/e2e-tests/docker-compose.yml
@@ -117,7 +117,7 @@ services:
       subquery-postgres:
         condition: service_healthy
       subquery-node:
-        condition: service_started
+        condition: service_healthy
     restart: always
     environment:
       - "DB_USER=${SUBQUERY_DB_USER}"
