--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.4.5",
     "snarkjs": "^0.7.4",
     "web3": "^4.9.0",
-    "yaml": "2.3.0"
+    "yaml": "2.3.0",
+    "zkverifyjs": "^0.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "7.21.5",
